Fixing images, alert's z-index and error when user doesn't have a current address

--- a/app/assets/stylesheets/elements/side_alert.scss
+++ b/app/assets/stylesheets/elements/side_alert.scss
@@ -4,6 +4,7 @@
   width: 100%;
   border-radius: 0;
   font: 16px/1.3em 'Raleway', sans-serif;
+  z-index: 999;
 
   .close {
     font-size: 50px;
